# proc-macro-workshop

bitfield/: Cargo.toml
builder/: Cargo.toml
builder/src/: lib.rs
debug/: Cargo.toml
debug/src/: lib.rs
